@@ -5,9 +5,45 @@ from geotrek.core.models import (Datasource, Stake, Usage, Network, Trail,
                                  Comfort,)
 
 
-admin.site.register(Datasource, PathManagerModelAdmin)
-admin.site.register(Stake, PathManagerModelAdmin)
-admin.site.register(Usage, PathManagerModelAdmin)
-admin.site.register(Network, PathManagerModelAdmin)
-admin.site.register(Trail, PathManagerModelAdmin)
-admin.site.register(Comfort, PathManagerModelAdmin)
+class DatasourceAdmin(PathManagerModelAdmin):
+    list_display = ('source', 'structure')
+    search_fields = ('source', 'structure')
+    list_filter = ('structure',)
+
+
+class StakeAdmin(PathManagerModelAdmin):
+    list_display = ('stake', 'structure')
+    search_fields = ('stake', 'structure')
+    list_filter = ('structure',)
+
+
+class UsageAdmin(PathManagerModelAdmin):
+    list_display = ('usage', 'structure')
+    search_fields = ('usage', 'structure')
+    list_filter = ('structure',)
+
+
+class NetworkAdmin(PathManagerModelAdmin):
+    list_display = ('network', 'structure')
+    search_fields = ('network', 'structure')
+    list_filter = ('structure',)
+
+
+class TrailAdmin(PathManagerModelAdmin):
+    list_display = ('name', 'structure')
+    search_fields = ('name', 'structure')
+    list_filter = ('structure',)
+
+
+class ComfortAdmin(PathManagerModelAdmin):
+    list_display = ('comfort', 'structure')
+    search_fields = ('comfort', 'structure')
+    list_filter = ('structure',)
+
+
+admin.site.register(Datasource, DatasourceAdmin)
+admin.site.register(Stake, StakeAdmin)
+admin.site.register(Usage, UsageAdmin)
+admin.site.register(Network, NetworkAdmin)
+admin.site.register(Trail, TrailAdmin)
+admin.site.register(Comfort, ComfortAdmin)
