@@ -5,7 +5,8 @@ from geotrek.infrastructure.models import InfrastructureType
 
 
 class InfrastructureTypeAdmin(PathManagerModelAdmin):
-    list_display = ('label',)
-    search_fields = ('label',)
+    list_display = ('label', 'structure')
+    search_fields = ('label', 'structure')
+    list_filter = ('structure',)
 
 admin.site.register(InfrastructureType, InfrastructureTypeAdmin)
