@@ -6,12 +6,15 @@ from .models import PhysicalType, LandType, RestrictedAreaType
 
 
 class PhysicalTypeAdmin(admin.ModelAdmin):
-    list_display = ('name',)
+    list_display = ('name', 'structure')
+    search_fields = ('name', 'structure')
+    list_filter = ('structure',)
 
 
 class LandTypeAdmin(admin.ModelAdmin):
     list_display = ('name', 'right_of_way', )
-    search_fields = ('name',)
+    search_fields = ('name', 'structure')
+    list_filter = ('structure',)
 
 
 admin.site.register(PhysicalType, PhysicalTypeAdmin)
