@@ -10,6 +10,8 @@ CHANGELOG
 * Map screenshot fix (ref #597)"
 * Default values for most Path DB columns (fixes #965)
 * Trek printable version looks for OpenDocument (*.odt) named "docprint" in attachments (fixes #686)
+* Show structure column and filter in admin (fixes #699)
+
 
 0.17 (2013-05-17)
 -----------------
